--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clickhouse/client": "^1.12.1",
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
+    "ioredis": "^5.7.0",
     "sequelize": "^6.37.7"
   }
 }
